--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -1,12 +1,12 @@
-@import url('../abstracts/variables.css');
-@import url('../base/reset.css');
-@import url('../utils/util.css');
-@import url('../utils/margin.css');
-@import url('../utils/padding.css');
+@import url('../../starterFiles/abstracts/variables.css');
+@import url('../../starterFiles/base/reset.css');
+@import url('../../starterFiles//utils/util.css');
+@import url('../../starterFiles//utils/margin.css');
+@import url('../../starterFiles//utils/padding.css');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* avatar */
-.avatar-small {
+.avatar-sm {
   width: 2rem;
   height: 2rem;
 }
@@ -18,7 +18,7 @@
   display: flex;
 }
 
-.avatar-mid {
+.avatar-md {
   width: 3rem;
   height: 3rem;
 }
@@ -28,7 +28,7 @@
   height: 4rem;
 }
 
-.avatar-x-large {
+.avatar-xl {
   width: 6rem;
   height: 6rem;
 }
