added alert component css and added flex-wrap

--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="avatar.css" />
+    <link rel="stylesheet" href="alert.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -13,7 +13,6 @@
   </head>
   <body>
     <!-- alert component -->
-
     <div class="centered-row m-v-3">
       <div class="alert alert-red p-h-2 m-4 round-corner box-shadow-light">
         <span><i class="fas fa-exclamation-circle alert-icon"></i></span>
