--- a/components/badge/badge.css
+++ b/components/badge/badge.css
@@ -3,3 +3,43 @@
 @import url('../../starterFiles//utils/util.css');
 @import url('../../starterFiles//utils/margin.css');
 @import url('../../starterFiles//utils/padding.css');
+
+/* badge component */
+
+/* badge avatar */
+.badge-wrapper {
+  position: relative;
+}
+
+.badge-avatar-red {
+  background: var(--primary-color);
+}
+
+.badge-avatar-green {
+  background: green;
+}
+
+.badge-avatar-grey {
+  background: grey;
+}
+
+.badge-avatar {
+  position: absolute;
+  bottom: 1rem;
+  left: 2.5rem;
+  width: 1rem;
+  height: 1rem;
+  border: 0.125rem solid var(--secondary-color);
+}
+
+/* badge-icon */
+
+.badge {
+  background: var(--primary-color);
+  border-radius: 50%;
+  color: white;
+  width: 1.2rem;
+  position: absolute;
+  top: -1px;
+  right: -2px;
+}
