--- a/components/badge/badge.css
+++ b/components/badge/badge.css
@@ -11,6 +11,11 @@
   position: relative;
 }
 
+.avatar-md {
+  width: 3rem;
+  height: 3rem;
+}
+
 .badge-avatar-red {
   background: var(--primary-color);
 }
