--- a/components/button/button.html
+++ b/components/button/button.html
@@ -12,13 +12,14 @@
     <title>avatar</title>
   </head>
   <body>
-    <div class="content-wrapper p-v-3">
+    <div class="centered-row p-v-3">
       <button class="btn btn-primary m-h-3 t-c-1">Default</button>
       <button class="btn btn-accent m-h-3 t-c-1">Accent</button>
       <button class="btn btn-danger m-h-3 t-c-1">Danger</button>
       <button class="btn outline-danger m-h-3 t-c-2">Danger</button>
       <button class="btn btn-pill f-4 btn-accent m-h-3 t-c-1">Pill</button>
       <button class="btn btn-custom m-h-3 t-c-1">show</button>
+      <button class="btn btn-danger floating m-8 t-c-1">Floating Button</button>
       <button class="btn btn-link m-h-3 t-c-3">Link</button>
       <button class="btn-link m-h-3 t-c-6">
         <i class="fas fa-shopping-cart f-8"></i>
