--- a/components/card/card.html
+++ b/components/card/card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="button.css" />
+    <link rel="stylesheet" href="card.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -90,13 +90,16 @@
 
       <!-- text only vertical cards -->
 
-      <article class="card-container text-only-vertical m-4">
-        <main class="card-body p-3">
+      <article class="card-container box-shadow-light text-only-vertical m-4">
+        <main class="card-body p-v-4 p-h-2 centered-column">
           <h3 class="f-7">This is a text only vertical card</h3>
           <p class="f-5">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti
             soluta laboriosam rem dolore earum debitis vero sapiente eaque
-            consequuntur facere!
+            consequuntur facere! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Cupiditate labore nemo vel incidunt voluptatibus
+            nam nostrum atque aliquid cumque maxime consequatur molestiae
+            inventore earum numquam, alias fuga! Officia, voluptas esse!
           </p>
         </main>
       </article>
