added the documentation part

--- a/starterFiles/abstracts/variables.css
+++ b/starterFiles/abstracts/variables.css
@@ -6,7 +6,7 @@
   --text-color: #131200;
   --text-color-2: #5c6672;
   --complimentary-bg-color: #0c0a3e;
-
+  --border-color: #e8e9eb;
   --box-shadow-dark: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
   --box-shadow-light: 0 3px 5px 1px rgba(0, 0, 0, 0.5);
 
