--- a/starterFiles/utils/util.css
+++ b/starterFiles/utils/util.css
@@ -6,6 +6,14 @@
   flex-wrap: wrap;
 }
 
+.space-around-row {
+  justify-content: space-around;
+}
+
+.component-border {
+  border: 1px solid var(--border-color);
+}
+
 .flex {
   display: flex;
 }
@@ -69,6 +77,14 @@
   box-shadow: var(--box-shadow-light);
 }
 
+.box-shadow-bottom {
+  box-shadow: 0px 15px 10px -15px var(--complimentary-text-color-2);
+}
+
+.box-shadow-right {
+  box-shadow: 15px 0px 10px -15px rgb(233, 232, 232);
+}
+
 .border-round {
   border-radius: 50%;
 }
@@ -113,6 +129,10 @@
   line-height: 1rem;
 }
 
+.l-h-4 {
+  line-height: 2.5rem;
+}
+
 /* images */
 
 .responsive-image {
@@ -125,4 +145,12 @@
 .image-container {
   width: fit-content;
   height: fit-content;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
