--- a/starterFiles/utils/util.css
+++ b/starterFiles/utils/util.css
@@ -135,22 +135,14 @@
 
 /* images */
 
-.responsive-image {
+.img-responsive {
   width: 100%;
   height: auto;
   object-fit: cover;
-  object-position: bottom;
+  object-position: center;
 }
 
 .image-container {
   width: fit-content;
   height: fit-content;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
 }
