--- a/style.css
+++ b/style.css
@@ -15,23 +15,23 @@ body {
 
 /* avatar */
 .avatar-sm {
-  width: 2rem;
-  height: 2rem;
-}
-
-.avatar-md {
   width: 3rem;
   height: 3rem;
 }
 
+.avatar-md {
+  width: 6rem;
+  height: 6rem;
+}
+
 .avatar-lg {
-  width: 4rem;
-  height: 4rem;
+  width: 8rem;
+  height: 8rem;
 }
 
 .avatar-x-l {
-  width: 6rem;
-  height: 6rem;
+  width: 10rem;
+  height: 10rem;
 }
 
 /* alert component */
@@ -79,10 +79,10 @@ body {
 .badge-avatar {
   position: absolute;
   bottom: 1rem;
-  left: 2.5rem;
-  width: 1rem;
-  height: 1rem;
-  border: 0.125rem solid var(--secondary-color);
+  right: 1.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  border: 0.145rem solid var(--secondary-color);
 }
 
 /* badge-icon */
