--- a/components/image/image.html
+++ b/components/image/image.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="centered-row space-around-row component-border p-4">
+      <!-- Normal responsive image -->
       <div class="image-container">
         <img
           src="https://picsum.photos/seed/picsum/200/200"
@@ -21,7 +22,7 @@
         />
       </div>
 
-      <!-- round corner -->
+      <!-- round image -->
       <div class="image-container">
         <img
           src="https://picsum.photos/seed/picsum/200/200"
