added text utility classes

--- a/starterFiles/utils/typography.css
+++ b/starterFiles/utils/typography.css
@@ -15,3 +15,9 @@
   font-weight: bold;
   line-height: 3.2rem;
 }
+
+.heading-4 {
+  font-size: 1.6rem;
+  font-weight: bold;
+  line-height: 2.4rem;
+}
