--- a/documentation/documention.css
+++ b/documentation/documention.css
@@ -1,7 +1,7 @@
 .grid-container {
   /* min-height: 100%; */
   display: grid;
-  grid-gap: 3px;
+  grid-gap: 1rem;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 40px auto;
   justify-content: center;
