--- a/documentation/navbar.css
+++ b/documentation/navbar.css
@@ -19,6 +19,7 @@
   pointer-events: none;
   cursor: pointer;
   margin-left: -6rem;
+  user-select: none;
 }
 
 #logo {
@@ -81,45 +82,6 @@
   margin-left: -5rem;
 }
 
-@media only screen and (max-width: 600px) {
-  /* max width */
-
-  .navbar {
-    width: 100%;
-  }
-
-  .nav-menu {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 8rem;
-    left: -100%;
-    transition: 850ms;
-  }
-
-  .nav-menu.active {
-    left: 0;
-    background: var(--border-color);
-    overflow: auto;
-    transition: 350ms;
-    height: 100vh;
-    z-index: 999;
-  }
-
-  .logo-click {
-    pointer-events: auto;
-    margin-left: -4rem;
-  }
-
-  .title {
-    display: none;
-  }
-
-  iframe {
-    width: 500px;
-  }
-}
-
 .rotate {
   -moz-transition: all 0.5s linear;
   -webkit-transition: all 0.5s linear;
@@ -129,8 +91,4 @@
   -moz-transform: rotate(90deg);
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
-}
-
-@media screen and (min-width: 1400px) {
-  /* big screen */
 }
