--- a/starterFiles/base/reset.css
+++ b/starterFiles/base/reset.css
@@ -12,6 +12,7 @@ body {
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 p {
@@ -24,4 +25,5 @@ ul {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
