--- a/documentation/documention.css
+++ b/documentation/documention.css
@@ -23,6 +23,10 @@
   margin-top: 3rem;
 }
 
+.code-snippet {
+  padding-right: 3rem;
+}
+
 @media only screen and (max-width: 600px) {
   /* For Mobile */
 
@@ -34,7 +38,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
-    top: 8rem;
+    top: 7rem;
     left: -100%;
     transition: 850ms;
   }
@@ -45,7 +49,6 @@
     overflow: auto;
     transition: 350ms;
     height: 100vh;
-    z-index: 999;
   }
 
   .logo-click {
