--- a/starterFiles/utils/util.css
+++ b/starterFiles/utils/util.css
@@ -6,6 +6,12 @@
   flex-wrap: wrap;
 }
 
+.flex-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .space-around-row {
   justify-content: space-around;
 }
