--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ input[type='range']:focus::-moz-range-thumb {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
   /* for mobile */
   max-width: 95%;
-  width: 500px;
+  width: 50rem;
   animation: modalopen 1s;
 }
 
@@ -537,16 +537,13 @@ input[type='range']:focus::-moz-range-thumb {
 }
 
 .close-icon {
-  float: right;
   color: var(--complimentary-text-color-2);
-  font-size: 24px;
-  position: relative;
-  top: 13px;
-  right: 13px;
+  margin-left: auto;
   cursor: pointer;
 }
 
 .modal-header {
+  display: flex;
   background: var(--primary-color);
   color: var(--complimentary-text-color-2);
 }
