Fix : Float removed added flex

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -17,9 +17,9 @@
     </div>
     <div class="modal-overlay modal-container z-index-x-l">
       <div class="modal">
-        <i class="fa fa-times close-icon close-modal"></i>
         <div class="modal-header p-4">
           <h3 class="heading-3">Modal Header</h3>
+          <i class="fa fa-times f-8 close-icon close-modal"></i>
         </div>
         <div class="modal-content p-8">
           <p class="heading-4">Modal Content</p>
@@ -34,6 +34,7 @@
           <button class="btn btn-danger m-h-3 t-c-1">Save Changes</button>
         </div>
       </div>
+    </div>
     </div>
     <script src="modal.js"></script>
   </body>
