mis-spelled fixed

--- a/components/grid/grid.html
+++ b/components/grid/grid.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <title>Rating</title>
+    <title>Grid</title>
   </head>
   <body>
     <div class="component-border p-4">
