fix : Changed the class name

--- a/components/grid/grid.html
+++ b/components/grid/grid.html
@@ -14,7 +14,7 @@
   <body>
     <div class="component-border p-4">
       <h3 class="heading-3 center-text t-c-3">Two Items in a Grid</h3>
-      <div class="grid-component-container">
+      <div class="grid-two-column">
         <div class="f-6">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit
           suscipit consequatur recusandae, facere autem ea dolorum accusamus
@@ -35,8 +35,8 @@
 
     <div class="component-border p-4 m-v-4">
       <h3 class="heading-3 t-c-3">Three Items in a Grid</h3>
-      <div class="grid-component-container-2">
-        <div class="grid-item-1 center-text heading-3">This is heading</div>
+      <div class="grid-with-area">
+        <div class="header center-text heading-3">This is heading</div>
         <aside class="aside">
           <nav>
             <ul>
@@ -46,7 +46,7 @@
             </ul>
           </nav>
         </aside>
-        <div class="grid-item-2 f-6">
+        <div class="content f-6">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, quo
           exercitationem in officiis veniam nobis tempora commodi eveniet quam .
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda in
