Added design system terminology

--- a/starterFiles/abstracts/variables.css
+++ b/starterFiles/abstracts/variables.css
@@ -4,7 +4,7 @@
   --complimentary-text-color-2: white;
   --accent-color: #14bdeb;
   --text-color: #131200;
-  --text-color-2: #5c6672;
+  --grey-color: #5c6672;
   --complimentary-bg-color: #0c0a3e;
   --border-color: #e8e9eb;
   --box-shadow-dark: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
